syntax = "proto3";
option csharp_namespace = "Protobuf.Api";

package api;
import "Share/Protos/Chat/UserInfo.proto";
import "Share/Protos/Shared/Status.proto";
import "google/protobuf/empty.proto";
service ApiAuthService{
  rpc GetApiAuth(chat.UserInfo)returns(ApiAuthToken);
  rpc CheckApiAuth(ApiAuthToken)returns(shared.Status);

  rpc GetAdmins(google.protobuf.Empty)returns(Admins);
  rpc AddAdmin(Admins)returns(shared.Status);
  rpc RemoveAdmin(Admins)returns(shared.Status);
}

message ApiAuthToken{
  string user_guid = 1;
  string auth_token = 2;
  int64 create_timestamp = 3;
  bool is_admin = 4;
}
message Admins{
  repeated string mail_boxes = 1;
}